--- a/public/css/home/style.css
+++ b/public/css/home/style.css
@@ -40,11 +40,11 @@
   font-weight: 400;
   font-style: italic;
   font-size: 69.84px;
-  color: #514A7E;
+  color: #514a7e;
 }
 .main .welcome .welcome-block .welcome-text {
   font-family: "Roboto", sans-serif;
-  color: #7D7D7D;
+  color: #7d7d7d;
   font-weight: 300;
   font-size: 16px;
   line-height: 18.88px;
@@ -68,19 +68,19 @@
   height: 193px;
   width: 193px;
   text-decoration: none;
-  border: 1px solid #514A7E;
+  border: 1px solid #514a7e;
   border-radius: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #514A7E;
+  color: #514a7e;
   font-weight: 500;
   position: relative;
   transition: all 0.3s ease-in;
 }
 .main .welcome .welcome-cataloglink-wrapper a .welcome-cataloglink-link:hover {
-  background-color: #514A7E;
-  color: #FFFDF5;
+  background-color: #514a7e;
+  color: #fffdf5;
 }
 
 .section-title {
@@ -141,7 +141,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid #7D7D7D;
+  border-bottom: 1px solid #7d7d7d;
   cursor: pointer;
   padding: 26px 0 17px;
 }
@@ -164,7 +164,7 @@
   max-height: 0;
   overflow: hidden;
   transition: all 0.3s;
-  color: #7D7D7D;
+  color: #7d7d7d;
   font-size: 16px;
   line-height: 18.88px;
 }
