--- a/public/css/order/style.css
+++ b/public/css/order/style.css
@@ -46,7 +46,7 @@
 }
 .order-info-wrapper .order-inputs-wrapper .order-input-wrapper input {
   border: none;
-  border-bottom: 1px solid #7D7D7D;
+  border-bottom: 1px solid #7d7d7d;
 }
 .order-info-wrapper .order-inputs-wrapper .order-input-wrapper input::-moz-placeholder {
   font-weight: 300;
@@ -59,7 +59,7 @@
   line-height: 18.88px;
 }
 .order-info-wrapper .order-inputs-wrapper .order-input-wrapper input.invalid {
-  background-color: #FF2400;
+  background-color: #ff2400;
   color: whitesmoke;
   text-shadow: 1px 1px 1px black;
 }
@@ -89,7 +89,7 @@
   font-weight: 400;
   font-size: 19px;
   line-height: 18.75px;
-  color: #514A7E;
+  color: #514a7e;
   position: relative;
   padding-left: 30px;
   cursor: pointer;
@@ -102,7 +102,7 @@
   width: 14px;
   top: calc(50% - 7px);
   left: 0;
-  border: 1px solid #514A7E;
+  border: 1px solid #514a7e;
   border-radius: 50%;
   transition: all 0.3s ease-in-out;
   cursor: pointer;
@@ -111,13 +111,13 @@
   display: none;
 }
 .delivery-data-wrapper .delivery-inputs-wrapper .delivery-item .delivery-head input[type=checkbox]:checked + label::after {
-  background-color: #514A7E;
+  background-color: #514a7e;
 }
 .delivery-data-wrapper .delivery-inputs-wrapper .delivery-item .delivery-body .delivery-desciption {
   font-weight: 400;
   font-size: 12px;
   line-height: 14.06px;
-  color: #7D7D7D;
+  color: #7d7d7d;
 }
 
 .payment-wrapper {
@@ -140,7 +140,7 @@
   font-weight: 400;
   font-size: 19px;
   line-height: 18.75px;
-  color: #514A7E;
+  color: #514a7e;
   position: relative;
   padding-left: 30px;
   cursor: pointer;
@@ -153,7 +153,7 @@
   width: 14px;
   top: calc(50% - 7px);
   left: 0;
-  border: 1px solid #514A7E;
+  border: 1px solid #514a7e;
   border-radius: 50%;
   transition: all 0.3s ease-in-out;
   cursor: pointer;
@@ -162,7 +162,7 @@
   display: none;
 }
 .payment-wrapper .payment-inputs-wrapper .payment-item input[type=checkbox]:checked + label::after {
-  background-color: #514A7E;
+  background-color: #514a7e;
 }
 
 .makeAnOrder-button-wrapper {
@@ -173,14 +173,14 @@
 .makeAnOrder-button-wrapper .makeAnOrder-button {
   height: 193px;
   width: 193px;
-  border: 1px solid #514A7E;
+  border: 1px solid #514a7e;
   border-radius: 50%;
   cursor: pointer;
   font-weight: 400;
   font-size: 20px;
   line-height: 23.44px;
   background-color: #fff;
-  color: #514A7E;
+  color: #514a7e;
   transition: all 0.3s ease;
 }
 .makeAnOrder-button-wrapper .makeAnOrder-button.disabled {
