--- a/public/css/product/style.css
+++ b/public/css/product/style.css
@@ -19,11 +19,11 @@
   transition: all 0.3s ease;
 }
 .arrow-back-wrapper .breadcrumbs-wrapper .breadcrumbs-list a {
-  color: #7D7D7D;
+  color: #7d7d7d;
   text-decoration: none;
 }
 .arrow-back-wrapper .breadcrumbs-wrapper .breadcrumbs-list a:hover {
-  color: #514A7E;
+  color: #514a7e;
 }
 
 .product-wrapper {
@@ -88,10 +88,10 @@
 }
 .product-wrapper .product-description .addToCart-button {
   padding: 14px 50px;
-  background-color: #514A7E;
+  background-color: #514a7e;
   font-weight: 400;
   line-height: 16.41px;
-  color: #FFFDF5;
+  color: #fffdf5;
   cursor: pointer;
 }
 .product-wrapper .product-description .product-price {
@@ -123,13 +123,13 @@
   background-color: #000000;
 }
 .product-wrapper .product-description .product-colors .colors-inputs-wrapper .color-checkbox-wrapper .color_green::after {
-  background-color: #1FA68E;
+  background-color: #1fa68e;
 }
 .product-wrapper .product-description .product-colors .colors-inputs-wrapper .color-checkbox-wrapper .color_pink::after {
-  background-color: #DC39CC;
+  background-color: #dc39cc;
 }
 .product-wrapper .product-description .product-colors .colors-inputs-wrapper .color-checkbox-wrapper .color_yellow::after {
-  background-color: #FFF385;
+  background-color: #fff385;
 }
 .product-wrapper .product-description .product-colors .colors-inputs-wrapper .color-checkbox-wrapper label::after {
   content: "";
@@ -145,7 +145,7 @@
   display: none;
 }
 .product-wrapper .product-description .product-colors .colors-inputs-wrapper .color-checkbox-wrapper input[type=checkbox]:checked + label::after {
-  border: 4px solid #514A7E;
+  border: 4px solid #514a7e;
 }
 .product-wrapper .product-description .product-sizes {
   display: flex;
@@ -181,7 +181,7 @@
   display: block;
   height: 30px;
   width: 30px;
-  border: 1px solid #514A7E;
+  border: 1px solid #514a7e;
   cursor: pointer;
   box-sizing: border-box;
   background-position: center;
@@ -192,7 +192,7 @@
   display: none;
 }
 .product-wrapper .product-description .product-sizes .sizes-inputs-wrapper .size-checkbox-wrapper input[type=checkbox]:checked + label::after {
-  border: 4px solid #514A7E;
+  border: 4px solid #514a7e;
 }
 .product-wrapper .product-description .product-depiction .product-depiction-title {
   font-weight: 400;
@@ -204,7 +204,7 @@
 .product-wrapper .product-description .product-depiction .product-depiction-content {
   font-size: 16px;
   line-height: 18.75px;
-  color: #7D7D7D;
+  color: #7d7d7d;
   text-align: justify;
   text-indent: 25px;
 }
@@ -236,7 +236,7 @@
   gap: 15px;
 }
 .reviews-wrapper .service-reviews-wrapper .reviews-container .reviews-line .review-wrapper {
-  border: 1px solid #514A7E;
+  border: 1px solid #514a7e;
   padding: 35px 25px;
   width: 450px;
   font-size: 12px;
@@ -247,7 +247,7 @@
   margin-bottom: 15px;
 }
 .reviews-wrapper .service-reviews-wrapper .reviews-container .reviews-line .review-wrapper .review-detail {
-  color: #7D7D7D;
+  color: #7d7d7d;
   text-align: justify;
   margin-bottom: 11px;
 }
@@ -260,7 +260,7 @@
   color: #121212;
 }
 .reviews-wrapper .service-reviews-wrapper .reviews-container .reviews-line .review-wrapper .review-info .review-date {
-  color: #514A7E;
+  color: #514a7e;
 }
 .reviews-wrapper .service-reviews-wrapper .reviews-arrow-right {
   height: 92px;
@@ -274,10 +274,10 @@
 
 .add-review-wrapper .add-review-button {
   padding: 14px 18px;
-  background-color: #514A7E;
+  background-color: #514a7e;
   font-weight: 400;
   line-height: 16.41px;
-  color: #FFFDF5;
+  color: #fffdf5;
   cursor: pointer;
 }
 
@@ -333,10 +333,10 @@
 }
 .modal-background .modal-window-wrapper .modal-content-form .add-review-button {
   padding: 14px 18px;
-  background-color: #514A7E;
+  background-color: #514a7e;
   font-weight: 400;
   line-height: 16.41px;
-  color: #FFFDF5;
+  color: #fffdf5;
   cursor: pointer;
   transition: all 0.3s ease-in;
 }
