--- a/resources/sass/cart/style.scss
+++ b/resources/sass/cart/style.scss
@@ -7,7 +7,6 @@
 }
 
 .cart-title-wrapper {
-
     display: flex;
     align-items: center;
     gap: 16px;
@@ -36,7 +35,7 @@
         .product-img-wrapper {
             position: relative;
 
-            >img {
+            > img {
                 position: absolute;
                 height: 100%;
                 width: 100%;
@@ -63,7 +62,7 @@
                 gap: 20px;
                 font-weight: 300;
                 line-height: 16.52px;
-                color: #7D7D7D;
+                color: #7d7d7d;
             }
 
             .product-buttons-wrapper {
@@ -81,11 +80,11 @@
                     background-repeat: no-repeat;
 
                     &.button-dec {
-                        background-image: url('/images/service/button_dec_icon.svg');                 
+                        background-image: url("/images/service/button_dec_icon.svg");
                     }
 
                     &.button-inc {
-                        background-image: url('/images/service/button_inc_icon.svg');
+                        background-image: url("/images/service/button_inc_icon.svg");
                         background-size: contain;
                     }
                 }
@@ -94,12 +93,11 @@
                     font-size: 20px;
                     font-weight: 400;
                     line-height: 23.6px;
-                    color: #514A7E;
+                    color: #514a7e;
                 }
             }
 
             .product-delete-wrapper {
-
                 .product-delete-item {
                     display: flex;
                     align-items: center;
@@ -107,7 +105,7 @@
                     cursor: pointer;
 
                     span {
-                        color: #7D7D7D;
+                        color: #7d7d7d;
                         font-weight: 300;
                         line-height: 16.52px;
                     }
@@ -131,7 +129,7 @@
                 font-weight: 400;
                 font-size: 40px;
                 line-height: 47.2px;
-                color: #514A7E;
+                color: #514a7e;
             }
         }
     }
@@ -151,29 +149,27 @@
                 font-weight: 400;
                 font-size: 40px;
                 line-height: 47.2px;
-                color: #514A7E;
+                color: #514a7e;
             }
         }
 
         .total-counter-wrapper {
-
             .total-counter {
-                color: #7D7D7D;
+                color: #7d7d7d;
                 font-weight: 300;
                 font-size: 14px;
                 line-height: 16.52px;
             }
         }
-
     }
 
     .order-link {
         text-decoration: none;
         padding: 14px 44px;
-        background-color: #514A7E;
+        background-color: #514a7e;
         font-weight: 400;
         line-height: 16.41px;
-        color: #FFFDF5;
+        color: #fffdf5;
         cursor: pointer;
     }
 }
@@ -185,7 +181,7 @@
     line-height: 34.92px;
     color: #121212;
 
-    &+.empty-cart-img-wrapper {
+    & + .empty-cart-img-wrapper {
         display: flex;
         justify-content: center;
     }
@@ -213,9 +209,8 @@
         width: 100px;
 
         .loader-line-wrap {
-            animation: 
-                spin 2000ms cubic-bezier(.175, .885, .32, 1.275) infinite
-            ;
+            animation: spin 2000ms cubic-bezier(0.175, 0.885, 0.32, 1.275)
+                infinite;
             box-sizing: border-box;
             height: 50px;
             left: 0;
@@ -227,7 +222,6 @@
         }
     }
 }
-
 
 .loader-line {
     border: 4px solid transparent;
@@ -241,11 +235,21 @@
     top: 0;
     width: 100px;
 }
-.loader-line-wrap:nth-child(1) { animation-delay: -50ms; }
-.loader-line-wrap:nth-child(2) { animation-delay: -100ms; }
-.loader-line-wrap:nth-child(3) { animation-delay: -150ms; }
-.loader-line-wrap:nth-child(4) { animation-delay: -200ms; }
-.loader-line-wrap:nth-child(5) { animation-delay: -250ms; }
+.loader-line-wrap:nth-child(1) {
+    animation-delay: -50ms;
+}
+.loader-line-wrap:nth-child(2) {
+    animation-delay: -100ms;
+}
+.loader-line-wrap:nth-child(3) {
+    animation-delay: -150ms;
+}
+.loader-line-wrap:nth-child(4) {
+    animation-delay: -200ms;
+}
+.loader-line-wrap:nth-child(5) {
+    animation-delay: -250ms;
+}
 
 .loader-line-wrap:nth-child(1) .loader-line {
     border-color: hsl(0, 80%, 60%);
@@ -279,10 +283,11 @@
 }
 
 @keyframes spin {
-    0%, 15% {
-		transform: rotate(0);
-	}
-	100% {
-		transform: rotate(360deg);
-	}
+    0%,
+    15% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
