--- a/resources/sass/catalog/style.scss
+++ b/resources/sass/catalog/style.scss
@@ -18,12 +18,12 @@ $paginationMinHeight: 33.6px;
         gap: 3px;
 
         a {
-            color: #7D7D7D;
+            color: #7d7d7d;
             text-decoration: none;
-            transition: all .3s ease;
+            transition: all 0.3s ease;
 
             &:hover {
-                color: #514A7E;
+                color: #514a7e;
             }
         }
     }
@@ -44,7 +44,7 @@ $paginationMinHeight: 33.6px;
     grid-column-gap: 35px;
 
     .catalog-sort-description {
-        color: #7D7D7D;
+        color: #7d7d7d;
         font-weight: 400;
         font-size: 20px;
         line-height: 23.44px;
@@ -64,7 +64,7 @@ $paginationMinHeight: 33.6px;
 
             .catalog-sort-value {
                 cursor: pointer;
-                transition:  all .3s ease-in;
+                transition: all 0.3s ease-in;
 
                 &.active-sort-link {
                     font-weight: bold;
@@ -74,8 +74,6 @@ $paginationMinHeight: 33.6px;
             input[type="text"] {
                 display: none;
             }
-
-            
         }
     }
 
@@ -88,14 +86,14 @@ $paginationMinHeight: 33.6px;
             display: flex;
             flex-direction: column;
             gap: 13px;
-            animation: .8s show ease;
+            animation: 0.8s show ease;
 
             .product-item-img-wrapper {
                 position: relative;
                 width: 100%;
                 height: 319px;
 
-                >img {
+                > img {
                     position: absolute;
                     top: 0;
                     left: 0;
@@ -119,7 +117,7 @@ $paginationMinHeight: 33.6px;
                     font-weight: 400;
                     font-size: 12px;
                     line-height: 14.06px;
-                    color: #7D7D7D;
+                    color: #7d7d7d;
                 }
             }
 
@@ -131,16 +129,14 @@ $paginationMinHeight: 33.6px;
                 .product-item-link {
                     text-decoration: none;
                     padding: 14px 25px;
-                    border:  1px solid #514A7E;
+                    border: 1px solid #514a7e;
                     display: flex;
                     justify-content: center;
                     gap: 9px;
-                    color: #514A7E;
+                    color: #514a7e;
                 }
             }
-
         }
-
     }
 }
 
@@ -159,7 +155,7 @@ $paginationMinHeight: 33.6px;
         align-items: center;
         gap: 10px;
         min-height: $paginationMinHeight;
-    
+
         .pagination-item {
             padding: 4px;
             border: 1px solid black;
@@ -169,9 +165,8 @@ $paginationMinHeight: 33.6px;
 }
 
 .catalog-sort-left {
-
     .catalog-filters-head {
-        font-weight: 400;    
+        font-weight: 400;
         font-size: 20px;
         line-height: 23.44px;
         display: grid;
@@ -179,14 +174,12 @@ $paginationMinHeight: 33.6px;
         cursor: pointer;
 
         img {
-            transition: all .3s ease-in;
+            transition: all 0.3s ease-in;
         }
-
     }
 
     .catalog-head-active {
-        
-        >img {
+        > img {
             transform: rotate(180deg);
         }
 
@@ -201,7 +194,7 @@ $paginationMinHeight: 33.6px;
         gap: 9px;
         max-height: 0;
         overflow: hidden;
-        transition: all .3s ease-in;
+        transition: all 0.3s ease-in;
         &:not(:last-child) {
             margin-bottom: 25px;
         }
@@ -218,7 +211,6 @@ $paginationMinHeight: 33.6px;
                 min-width: 19px;
 
                 &::after {
-
                     content: "";
                     position: absolute;
                     display: block;
@@ -226,21 +218,18 @@ $paginationMinHeight: 33.6px;
                     width: 11px;
                     top: calc(50% - 5.5px);
                     right: -40px;
-                    border: 1px solid #514A7E;
+                    border: 1px solid #514a7e;
                     border-radius: 50%;
-                    transition: all .3s ease-in-out;
-
+                    transition: all 0.3s ease-in-out;
                 }
-
             }
 
             input[type="checkbox"] {
                 display: none;
 
                 &:checked {
-                
-                    +label::after {
-                        background-color: #514A7E;
+                    + label::after {
+                        background-color: #514a7e;
                     }
                 }
             }
@@ -248,7 +237,6 @@ $paginationMinHeight: 33.6px;
     }
 
     .catalog-sizes-colors {
-        
         label {
             min-width: 70px !important;
             &::after {
@@ -256,10 +244,7 @@ $paginationMinHeight: 33.6px;
             }
         }
     }
-
 }
-
-
 
 .loader {
     background: #000;
@@ -283,9 +268,8 @@ $paginationMinHeight: 33.6px;
         width: 100px;
 
         .loader-line-wrap {
-            animation: 
-                spin 2000ms cubic-bezier(.175, .885, .32, 1.275) infinite
-            ;
+            animation: spin 2000ms cubic-bezier(0.175, 0.885, 0.32, 1.275)
+                infinite;
             box-sizing: border-box;
             height: 50px;
             left: 0;
@@ -297,7 +281,6 @@ $paginationMinHeight: 33.6px;
         }
     }
 }
-
 
 .loader-line {
     border: 4px solid transparent;
@@ -311,11 +294,21 @@ $paginationMinHeight: 33.6px;
     top: 0;
     width: 100px;
 }
-.loader-line-wrap:nth-child(1) { animation-delay: -50ms; }
-.loader-line-wrap:nth-child(2) { animation-delay: -100ms; }
-.loader-line-wrap:nth-child(3) { animation-delay: -150ms; }
-.loader-line-wrap:nth-child(4) { animation-delay: -200ms; }
-.loader-line-wrap:nth-child(5) { animation-delay: -250ms; }
+.loader-line-wrap:nth-child(1) {
+    animation-delay: -50ms;
+}
+.loader-line-wrap:nth-child(2) {
+    animation-delay: -100ms;
+}
+.loader-line-wrap:nth-child(3) {
+    animation-delay: -150ms;
+}
+.loader-line-wrap:nth-child(4) {
+    animation-delay: -200ms;
+}
+.loader-line-wrap:nth-child(5) {
+    animation-delay: -250ms;
+}
 
 .loader-line-wrap:nth-child(1) .loader-line {
     border-color: hsl(0, 80%, 60%);
@@ -349,15 +342,20 @@ $paginationMinHeight: 33.6px;
 }
 
 @keyframes spin {
-    0%, 15% {
-		transform: rotate(0);
-	}
-	100% {
-		transform: rotate(360deg);
-	}
+    0%,
+    15% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 @keyframes show {
-    from { opacity: 0; }
-    to { opacity: 1; }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
