--- a/resources/sass/common/style.scss
+++ b/resources/sass/common/style.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Bad+Script&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bad+Script&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 $navMenuMinWidth: 278px;
 
@@ -17,7 +17,7 @@ input,
 button,
 textarea,
 select {
-  font: inherit;
+    font: inherit;
 }
 
 body {
@@ -26,7 +26,7 @@ body {
     text-rendering: optimizeSpeed;
     line-height: 1.5;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif; 
+    font-family: "Roboto", sans-serif;
 }
 
 .header {
@@ -51,16 +51,16 @@ body {
         .auth-link {
             text-decoration: none;
             color: #121212;
-            transition: all .3s ease-in;
+            transition: all 0.3s ease-in;
 
             &:hover {
-                color: #514A7E;
+                color: #514a7e;
             }
         }
 
         .auth-info {
             font-size: 10px;
-            color: #7D7D7D;;
+            color: #7d7d7d;
         }
     }
 
@@ -72,7 +72,7 @@ body {
         .cart-widget-wrapper {
             height: 36px;
             width: 36px;
-            background-image: url('/images/service/cart_widget_icon.svg');
+            background-image: url("/images/service/cart_widget_icon.svg");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -83,8 +83,8 @@ body {
                 bottom: -13px;
                 right: -23px;
                 padding: 7px 12px;
-                background-color: #514A7E;
-                color: #FFFDF5;
+                background-color: #514a7e;
+                color: #fffdf5;
                 border-radius: 50%;
                 font-size: 11px;
 
@@ -107,7 +107,6 @@ body {
             background-color: black;
             width: 30px;
             height: 3px;
-            
         }
     }
 
@@ -115,7 +114,7 @@ body {
         min-height: 25px;
         min-width: 30px;
         position: relative;
-        background-image: url('/images/service/closeBurgerIcon.png');
+        background-image: url("/images/service/closeBurgerIcon.png");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -123,12 +122,11 @@ body {
         .burger-item {
             display: none;
         }
-        
     }
 
     .nav {
         background-color: #121212;
-        color: #FFFDF5;
+        color: #fffdf5;
         position: absolute;
         top: 0;
         left: -$navMenuMinWidth;
@@ -136,8 +134,8 @@ body {
         display: flex;
         flex-direction: column;
         min-width: $navMenuMinWidth;
-        font-family: 'Roboto', sans-serif;
-        transition: all .3s ease-in;
+        font-family: "Roboto", sans-serif;
+        transition: all 0.3s ease-in;
         z-index: 100;
 
         .nav-links-wrapper {
