--- a/resources/sass/home/style.scss
+++ b/resources/sass/home/style.scss
@@ -19,77 +19,76 @@
         display: grid;
         grid-template-columns: auto 1fr;
         grid-template-rows: 1fr auto;
-    
+
         .welcome-block {
             display: flex;
             flex-direction: column;
             gap: 60px;
-            transition: all .3s ease-in;
-    
+            transition: all 0.3s ease-in;
+
             .welcome-title-wrapper {
-                font-family: 'Roboto', sans-serif;
+                font-family: "Roboto", sans-serif;
                 max-width: 537px;
                 font-weight: 300;
                 font-size: 38px;
                 line-height: 69.84px;
                 color: #121212;
-    
+
                 span {
-                    font-family: 'Bad Script', cursive;
-                    font-family: 'Montserrat', sans-serif;
+                    font-family: "Bad Script", cursive;
+                    font-family: "Montserrat", sans-serif;
                     font-weight: 400;
                     font-style: italic;
                     font-size: 69.84px;
-                    color: #514A7E;
+                    color: #514a7e;
                 }
             }
-    
+
             .welcome-text {
-                font-family: 'Roboto', sans-serif;
-                color: #7D7D7D;
+                font-family: "Roboto", sans-serif;
+                color: #7d7d7d;
                 font-weight: 300;
                 font-size: 16px;
                 line-height: 18.88px;
                 max-width: 249px;
             }
         }
-    
+
         .promo-image-block {
             display: flex;
             justify-content: flex-end;
             align-items: flex-start;
         }
-    
+
         .welcome-cataloglink-wrapper {
             grid-column: 1/3;
             display: flex;
             justify-content: center;
             align-items: center;
-    
+
             a {
                 text-decoration: none;
-    
+
                 .welcome-cataloglink-link {
                     height: 193px;
                     width: 193px;
                     text-decoration: none;
-                    border: 1px solid #514A7E;
+                    border: 1px solid #514a7e;
                     border-radius: 100%;
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    color: #514A7E;
+                    color: #514a7e;
                     font-weight: 500;
                     position: relative;
-                    transition: all .3s ease-in;
-    
+                    transition: all 0.3s ease-in;
+
                     &:hover {
-                        background-color: #514A7E;
-                        color: #FFFDF5;
+                        background-color: #514a7e;
+                        color: #fffdf5;
                     }
                 }
             }
-     
         }
     }
 }
@@ -132,14 +131,13 @@
                 max-width: 175px;
             }
         }
-
     }
 }
 
 .arrow-top {
     height: 72px;
     width: 72px;
-    background-image: url('/images/service/arrowTop.svg');
+    background-image: url("/images/service/arrowTop.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -158,24 +156,22 @@
         width: 100%;
         display: flex;
         justify-content: space-between;
-        border-bottom: 1px solid #7D7D7D;
+        border-bottom: 1px solid #7d7d7d;
         cursor: pointer;
         padding: 26px 0 17px;
 
         p {
             font-weight: 400;
             font-size: 20px;
-            line-height: 23.44px;      
+            line-height: 23.44px;
         }
 
         .accordeon-head-icon {
-            transition: all .25s ease-in;
+            transition: all 0.25s ease-in;
         }
-
     }
 
     .active {
-
         + .accordeon-body {
             max-height: 200px;
             padding: 40px 0 32px;
@@ -189,10 +185,9 @@
     .accordeon-body {
         max-height: 0;
         overflow: hidden;
-        transition: all .3s;
-        color: #7D7D7D;
+        transition: all 0.3s;
+        color: #7d7d7d;
         font-size: 16px;
         line-height: 18.88px;
     }
-
 }
