--- a/resources/sass/order/style.scss
+++ b/resources/sass/order/style.scss
@@ -39,7 +39,7 @@
         .order-input-wrapper {
             display: grid;
             grid-template-columns: 130px 1fr;
-            grid-column-gap: 30px;       
+            grid-column-gap: 30px;
 
             label {
                 cursor: pointer;
@@ -48,7 +48,7 @@
 
             input {
                 border: none;
-                border-bottom: 1px solid #7D7D7D;
+                border-bottom: 1px solid #7d7d7d;
 
                 &::placeholder {
                     font-weight: 300;
@@ -57,11 +57,10 @@
                 }
 
                 &.invalid {
-                    background-color: #FF2400;
+                    background-color: #ff2400;
                     color: whitesmoke;
                     text-shadow: 1px 1px 1px black;
                 }
-
             }
         }
     }
@@ -88,20 +87,18 @@
             display: flex;
             flex-direction: column;
             gap: 22px;
-            
+
             .delivery-head {
-                
                 label {
                     font-weight: 400;
                     font-size: 19px;
                     line-height: 18.75px;
-                    color: #514A7E;
+                    color: #514a7e;
                     position: relative;
                     padding-left: 30px;
                     cursor: pointer;
 
                     &::after {
-
                         content: "";
                         position: absolute;
                         display: block;
@@ -109,11 +106,10 @@
                         width: 14px;
                         top: calc(50% - 7px);
                         left: 0;
-                        border: 1px solid #514A7E;
+                        border: 1px solid #514a7e;
                         border-radius: 50%;
-                        transition: all .3s ease-in-out;
+                        transition: all 0.3s ease-in-out;
                         cursor: pointer;
-
                     }
                 }
 
@@ -121,9 +117,8 @@
                     display: none;
 
                     &:checked {
-                    
-                        +label::after {
-                            background-color: #514A7E;
+                        + label::after {
+                            background-color: #514a7e;
                         }
                     }
                 }
@@ -134,7 +129,7 @@
                     font-weight: 400;
                     font-size: 12px;
                     line-height: 14.06px;
-                    color: #7D7D7D;
+                    color: #7d7d7d;
                 }
             }
         }
@@ -159,18 +154,16 @@
         margin-bottom: 120px;
 
         .payment-item {
-
             label {
                 font-weight: 400;
                 font-size: 19px;
                 line-height: 18.75px;
-                color: #514A7E;
+                color: #514a7e;
                 position: relative;
                 padding-left: 30px;
                 cursor: pointer;
 
                 &::after {
-
                     content: "";
                     position: absolute;
                     display: block;
@@ -178,11 +171,10 @@
                     width: 14px;
                     top: calc(50% - 7px);
                     left: 0;
-                    border: 1px solid #514A7E;
+                    border: 1px solid #514a7e;
                     border-radius: 50%;
-                    transition: all .3s ease-in-out;
+                    transition: all 0.3s ease-in-out;
                     cursor: pointer;
-
                 }
             }
 
@@ -190,9 +182,8 @@
                 display: none;
 
                 &:checked {
-                
-                    +label::after {
-                        background-color: #514A7E;
+                    + label::after {
+                        background-color: #514a7e;
                     }
                 }
             }
@@ -208,15 +199,15 @@
     .makeAnOrder-button {
         height: 193px;
         width: 193px;
-        border: 1px solid #514A7E;
+        border: 1px solid #514a7e;
         border-radius: 50%;
         cursor: pointer;
         font-weight: 400;
         font-size: 20px;
         line-height: 23.44px;
         background-color: #fff;
-        color: #514A7E;
-        transition: all .3s ease;
+        color: #514a7e;
+        transition: all 0.3s ease;
 
         &.disabled {
             opacity: 0.4;
@@ -230,11 +221,11 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0, 0, 0, 0.5);
     z-index: 1050;
 
     .modal-window-wrapper {
-        animation: .8s show ease;
+        animation: 0.8s show ease;
         position: absolute;
         z-index: 9999;
         top: calc(50vh - 250px);
@@ -266,6 +257,10 @@
 }
 
 @keyframes show {
-    from { opacity: 0; }
-    to { opacity: 1; }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
